general/platform-components/helm/kyverno-policies/tests/itGrundschutz/base/resources/pods.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: passing-registry
spec:
  containers:
    - name: good-pod
      image: example.com/app
---
apiVersion: v1
kind: Pod
metadata:
  name: not-passing-registry
spec:
  containers:
    - name: bad-pod
      image: docker.io/app
